Fix snakbar width on overflow text. Added emai llvalidaiton for patient appointmet page.

--- a/resources/frontend2/src/styles.scss
+++ b/resources/frontend2/src/styles.scss
@@ -252,3 +252,7 @@ mat-expansion-panel-header.mat-expanded mat-panel-title {
     font-size: 12px !important;
   }
 }
+
+mat-simple-snackbar span {
+  overflow-wrap: anywhere;
+}
